public/css/styles.css
/* ... */
  
  input:checked + .slider {
    background-color: #6FCF97;
  }

  input:checked + .slider:before {
    background-color: rgb(93, 177, 128);
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(50px);
    -ms-transform: translateX(50px);
    transform: translateX(50px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }
/* FANCY TOGGLES */
/* ///////////////// PLACEHOLDER and IMAGES //////////////// */

.chest-xr-img {
    width: 100%;
    padding: 0;
}

#case-content-button {
    display: flex;
    margin: auto;
    z-index: 30;
    transition-duration: 0.001s;
}

#case-content-button img{
    width: 50px;
    padding: 0;

    margin-left: -2em;
    position: fixed;
    /* top: 10vh; */
    bottom: calc(2em + 68px);
}

/* COLLAPSE BUTTON */
#collapse-button {
    position: absolute;
    visibility: hidden;
    top: 12vh;
    left: 34.5vw;
    z-index: 3;
    transition-duration: 0s;
    filter: none;
    -webkit-filter: none;
}

#collapse-button > img {
    width: 10vw;
}

#collapse-button #collapse-button-arrows {
    width: 2vw;
    position: relative;
    top: -3.5vw;
    left: -4vw;
    transition-duration: 0.3s;
    transform: rotateZ(0deg);
}

#collapse-button:before{
    position: absolute;
    content: "";
    width: 5.5vw;
    height: calc(100% + 10px);
    left: 0;
    top: -5px;
    background: white;
    filter: none;
}


/* ////////////////// INTERACTION: REVIEW INFORMATION MODAL ///////////////////// */
.no-modal {
    display: none;
}

.show-modal {
    background-color: rgba(0,0,0,0.4);
    display: grid;
    grid-template-rows: 45px 1fr;
    grid-template-columns: 180px 110px 1fr;
    grid-template-areas: "Examination ChestXR ." "Information Information Information";
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 10;
}

#modal {
    margin: auto;
    width: 30vw;
    height: 62vh;
    opacity: 1;
    background-color: transparent;
    border-radius: 12px;
    position: fixed;
    top: 18vh;
    left: 5vw;
}

#on-examination-review {
    grid-area: Examination;
    background-color: white;
    color: var(--module-colour);
    padding: 0.8em;
    border-radius: 10px 10px 0 0;
    text-transform: uppercase;
}

#chest-xr-review {
    grid-area: ChestXR;
    background-color: var(--module-colour);
    color: white;
    padding: 0.8em;
    border-radius: 10px 10px 0 0;
    text-transform: uppercase;
}

#on-examination-review:hover, #chest-xr-review:hover {
    cursor: pointer;
}

#on-examination-review-content div {
    position: sticky;
    top: 0;
    margin-top: -0.1em;
    background-color: white;
    padding: 0.5em;
}

#on-examination-review-content h4 {
    margin: 1em 0 0.5em 0;
}

#on-examination-review-content li {
    padding: 0.1em 0;
}
#on-examination-review-content ul {
    padding-top: 0.5em;
}

#on-examination-review-content, #chest-xr-review-content {
    grid-area: Information;
    background-color: white;
    color: black;
    text-align: left;
    padding: 1em;
    padding-bottom: 2em;
    overflow-y: auto;
    margin-top: -0.2em;
}

#on-examination-review-content {
    flex-direction: column;
    scroll-padding-top: 50px;
    padding-top: 0;
}

#chest-xr-review-content {
    display: none;
    padding-top: 2em;
}

#chest-xr-review-content img {
    height: 100%;
    max-width: 100%;
    width: auto;
    margin:auto;
}

/* LABELS  */

#heart-model {
    position: relative; 
    width: 100%;
    height: 100%;
    display: none;
    max-height: calc(100vh - 50px);
    overflow: hidden;
}

#c {
    width: 100%; 
    height: calc(100vh - 50px);
    max-height: calc(100vh - 50px);
    display: block;
    /* background-color: #595959 */
    background-image: linear-gradient(to right, white, #595959);
    overflow: hidden;
}

#labels {
    font-family: 'Nunito', sans-serif;
    position: absolute;  /* let us position ourself inside the container */
    z-index: 0;          /* make a new stacking context so children don't sort with rest of page */
    left: 0;             /* make our position the top left of the container */
    top: 0;
    color: white;
    /* opacity:0.5; */
    text-align: center;
    max-height: calc(100vh - 50px);
    overflow: hidden;
}

#labels div {
    background-color: #595959;
    color: white;
    padding: 0.5em;
    border-radius: 0.25em;
    visibility: hidden;
}

/* ///////////////////// transitionS //////////////////////////// */
.fade-in {
    transition:opacity 3s ease-in-out;
    -webkit-transition: opacity 3s ease-in-out;
    -moz-transition: opacity 3s ease-in-out;
    -o-transition: opacity 3s ease-in-out;
    -ms-transition: opacity 3s ease-in-out;
  }


/*///////////////////////////////////////////////////////////////////////////////////////////////////////*/
/*///////////////////////////////////// MEDIA QUERIES START HERE ////////////////////////////////////////*/
@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {

    /* STYLES GO HERE */ 
}

@media only screen and (max-width: 984px) {

}

